--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -6,7 +6,8 @@
     android:background="#E8C67E"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".RegisterFragment"
+    >
 
 
     <Button
@@ -47,6 +48,7 @@
 
 
     <EditText
+        android:hint="@string/password"
         android:id="@+id/password_reg_confirm"
         android:layout_width="335dp"
         android:layout_height="49dp"
@@ -64,6 +66,7 @@
         app:layout_constraintVertical_bias="0.384" />
 
     <EditText
+        android:hint="@string/confirm_password"
         android:id="@+id/password_reg"
         android:layout_width="335dp"
         android:layout_height="49dp"
